feat(backend): add ws metrics (#98)
