# web/backend/openapi.json
@@ -229,6 +229,26 @@
                           "sizeRequests"
                         ]
                       }
+                    },
+                    "dataWebsocket": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "connections": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "connections"
+                        ]
+                      }
                     }
                   },
                   "required": [
@@ -237,7 +257,8 @@
                     "dataKafka",
                     "dataReq",
                     "dataLatency",
-                    "dataUndici"
+                    "dataUndici",
+                    "dataWebsocket"
                   ]
                 }
               }
@@ -474,6 +495,26 @@
                           "sizeRequests"
                         ]
                       }
+                    },
+                    "dataWebsocket": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "connections": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "connections"
+                        ]
+                      }
                     }
                   },
                   "required": [
@@ -482,7 +523,8 @@
                     "dataKafka",
                     "dataReq",
                     "dataLatency",
-                    "dataUndici"
+                    "dataUndici",
+                    "dataWebsocket"
                   ]
                 }
               }
@@ -727,6 +769,26 @@
                           "sizeRequests"
                         ]
                       }
+                    },
+                    "dataWebsocket": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "connections": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "connections"
+                        ]
+                      }
                     }
                   },
                   "required": [
@@ -735,7 +797,8 @@
                     "dataKafka",
                     "dataReq",
                     "dataLatency",
-                    "dataUndici"
+                    "dataUndici",
+                    "dataWebsocket"
                   ]
                 }
               }
